--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>南瓜书PumpkinBook</title>
+  <title>机考算法学习</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -19,7 +19,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '南瓜书PumpkinBook',
+      name: '机考算法学习',
       loadSidebar: true,
       subMaxLevel: 2,
       alias: {
