--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-  <link rel="icon" href="https://wdndev.github.io/img/wdn_icon.png">
+  <link rel="icon" href="https://noyeark.github.io/img/favicon.jpg">
 </head>
 <body>
   <div id="app"></div>
@@ -57,8 +57,6 @@
      },
     }
   </script>
-
-
   
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
