--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-  <link rel="icon" href="https://noyeark.github.io/img/favicon.jpg">
+  <link rel="icon" href="https://c-ssl.dtstatic.com/uploads/blog/202401/21/6zSM3OYPFqYAl77.thumb.1000_0.jpg">
   <style>
     .katex-display > .katex {
       max-width: 100%;
