--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script>
     window.$docsify = {
       name: '机考算法学习',
+      repo: 'https://github.com/NoyeArk/Algorithm',
       loadSidebar: true,
       subMaxLevel: 2,
       alias: {
@@ -58,6 +59,10 @@
      },
     }
   </script>
+
+  <!-- Prism 核心库 -->
+  <link rel="stylesheet" href="//unpkg.com/prismjs/themes/prism.css">
+  <script src="//unpkg.com/prismjs/prism.js"></script>
 
   <!-- 代码高亮 -->
   <script src="//unpkg.com/prismjs/components/prism-c.js"></script>
