--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
   <title>机考算法学习</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
   <link rel="icon" href="https://c-ssl.dtstatic.com/uploads/blog/202401/21/6zSM3OYPFqYAl77.thumb.1000_0.jpg">
-  <style>
-    .katex-display > .katex {
-      max-width: 100%;
-      overflow-x: auto;
-      overflow-y: hidden;
-    }
-  </style>
 </head>
 <body>
   <div id="app"></div>
