--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
     window.$docsify = {
       name: '机考算法学习',
       repo: 'https://github.com/NoyeArk/Algorithm',
+      // 开启侧边栏
       loadSidebar: true,
+      auto2top: true,
+      loadNavbar: true,
       subMaxLevel: 2,
+      // sidebarDisplayLevel: 2,
+      // subMaxLevel: 2,
       alias: {
-        '/.*/_sidebar.md': '/_sidebar.md'
+          '/.*/_sidebar.md': '/_sidebar.md'
       },
       pagination: {
           previousText: '上一章节',
@@ -49,7 +54,7 @@
        right: 12,
        bottom: 52,
        offset: 25
-     },
+     }
     }
   </script>
 
