--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-  <link rel="icon" href="https://c-ssl.dtstatic.com/uploads/blog/202401/21/6zSM3OYPFqYAl77.thumb.1000_0.jpg">
+  <link rel="icon" href="http://pic.imeitou.com/uploads/allimg/240703/10-240F3153005.jpg">
 </head>
 <body>
   <div id="app"></div>
