--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="//unpkg.com/prismjs/themes/prism.css">
   <style>
     .katex-display > .katex {
       max-width: 100%;
@@ -27,14 +28,25 @@
       }
     }
   </script>
-  <!-- CDN files for docsify-katex -->
+  
+  <!-- KaTeX for math rendering -->
   <script src="https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.js"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/marked@3"></script>
 
-  <!-- CDN files for docsify-katex -->
+  <!-- Docsify KaTeX plugin -->
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
-  <!-- Put them above docsify.min.js -->
+
+  <!-- Prism.js for code highlighting -->
+  <script src="//unpkg.com/prismjs/prism.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-c.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-cpp.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-python.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-javascript.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-css.min.js"></script>
+
+  <!-- Docsify core -->
   <script src="//cdn.jsdelivr.net/npm/docsify@latest/lib/docsify.min.js"></script>
 </body>
 </html>
