--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       name: '机考算法学习',
       loadSidebar: true,
       subMaxLevel: 2,
-      alias: {
-        '/_sidebar.md': '/_sidebar.md'
-      }
+      // alias: {
+      //   '/.*/_sidebar.md': '/_sidebar.md'
+      // }
     }
   </script>
   
@@ -37,20 +37,13 @@
   <!-- Docsify KaTeX plugin -->
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
 
-  <!-- 代码高亮 -->
-  <script src="//unpkg.com/prismjs/components/prism-c.js"></script>
+  <!-- Prism.js for code highlighting -->
+  <script src="//unpkg.com/prismjs/prism.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-cpp.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-java.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-python.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-javascript.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-css.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-powershell.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-sql.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-yaml.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-properties.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs/components/matlab.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-json.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-python.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-javascript.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-css.min.js"></script>
 
   <!-- Docsify core -->
   <script src="//cdn.jsdelivr.net/npm/docsify@latest/lib/docsify.min.js"></script>
