--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
   <!-- Prism.js for code highlighting -->
   <script src="//unpkg.com/prismjs/prism.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-c.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-cpp.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-python.min.js"></script>
