--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script>
     window.$docsify = {
       name: '机考算法学习',
-      loadSidebar: true,
+      loadSidebar: false,
       subMaxLevel: 2,
       // alias: {
       //   '/.*/_sidebar.md': '/_sidebar.md'
@@ -38,7 +38,6 @@
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
 
   <!-- Prism.js for code highlighting -->
-  <script src="//unpkg.com/prismjs/prism.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-c.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-cpp.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
