--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="algorithm/image/icon.jpg">
-  <link href="prism.css" rel="stylesheet" />
+  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <link href="prism.css" rel="stylesheet"/>
+  <link rel="icon" href="algorithm/image/icon.jpg">
   <style>
     .katex-display > .katex {
       max-width: 100%;
